# CYTOLONE

./: .gitignore  README.md  README_JA.md  pyproject.toml  setup.py
CYTOLONE/: app.py  config.ini  config.py  download_models.py  label_caption.py  model.py  util.py
CYTOLONE/default_config/: config_manager.py  default_config.ini
CYTOLONE/scale_check/: README.md  README_JA.md  scale_checker.py
